--- a/4_kbsintegrationdl/kbsintegrationdl.tex
+++ b/4_kbsintegrationdl/kbsintegrationdl.tex
@@ -1,9 +1,9 @@
 \chapter{Knowledge-Based System Introduction into a Deep Learning Environment}\label{chap:kbsintegrationdl}
 
 %Motivaciones de esto: Incrementar capacidad de generalización, reducir número de recursos, aumento de la interpretabilidad del modelo. Restricciones de esto: 
-This chapter\footnote{The content of this chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., Hohenecker, P., \& Lukasiewicz, T. (2021). An ontology-based deep learning approach for triple classification with out-of-knowledge-base entities. Information Sciences, 564, 85–102. doi:10.1016/j.ins.2021.02.018} focuses the first of the integrations contemplated in this thesis: the insertion of knowledge-based systems in deep learning models. Section \ref{4_sec:methodology_kbs_intro_dl} outlines the specific method parameters of this integration, along with the relations between them. This design is then materialized into a hybrid proposal for KGC. KGC is one of the main fields of application of neurosymbolic approaches, as it provides a propitious scenario where both symbolic and subsymbolic approaches are suitable. This chapter presents a semantic-based initialization approach, which can be combined with any KGE model, subsequently generating a hybrid approach. Section \ref{4_sec:ontointro_kgc} outlines the motivation and overview of the proposed initialization, presented Section \ref{4_sec:semantic_initialization}. Section \ref{4_sec:experiments} presents the different experiments conducted to validate the proposal, as well as the achieved results, which are discussed in Section \ref{4_sec:results}. Section \ref{4_sec:method_assessment} frames the presented use case in the context of the general design method, providing insights on the specific parameter values. Section \ref{4_sec:summary} summarizes the content of the chapter. 
+This chapter\footnote{The content of this chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., Hohenecker, P., and Lukasiewicz, T. (2021). An ontology-based deep learning approach for triple classification with out-of-knowledge-base entities. Information Sciences, 564, 85–102. doi:10.1016/j.ins.2021.02.018} focuses the first of the integrations contemplated in this thesis: the insertion of knowledge-based systems in deep learning models. Section \ref{4_sec:methodology_kbs_intro_dl} outlines the specific method parameters of this integration, along with the relations between them. This design is then materialized into a hybrid proposal for KGC. KGC is one of the main fields of application of neurosymbolic approaches, as it provides a propitious scenario where both symbolic and subsymbolic approaches are suitable. This chapter presents a semantic-based initialization approach, which can be combined with any KGE model, subsequently generating a hybrid approach. Section \ref{4_sec:ontointro_kgc} outlines the motivation and overview of the proposed initialization, presented Section \ref{4_sec:semantic_initialization}. Section \ref{4_sec:experiments} presents the different experiments conducted to validate the proposal, as well as the achieved results, which are discussed in Section \ref{4_sec:results}. Section \ref{4_sec:method_assessment} frames the presented use case in the context of the general design method, providing insights on the specific parameter values. Section \ref{4_sec:summary} summarizes the content of the chapter. 
 
-\begin{figure}[ht]
+\begin{figure}[t]
     \centering
     \includegraphics[width=\linewidth]{4_kbsintegrationdl/figures/overview_kbs_dl_intro.eps}
     \caption{Overview on the Insertion of Knowledge-Based Systems in Deep Learning.}
@@ -12,9 +12,7 @@ This chapter\footnote{The content of this chapter is based on the work: Amador-D
 
 %%%LA MOVIDA DE LA SENSIA EN ESTA VERTIENTE CONCRETA
 \section{Knowledge-Based System Insertion in Deep Learning Models} \label{4_sec:methodology_kbs_intro_dl}
-
-\elvitodo{REFERENCIAR AL RESPECTO DEL CAPITULO 3}
-In this scenario, the DL model plays the primary role, while the KBS plays the secondary role. Figure \ref{fig:overview_kbs_dl_intro} outlines the specific methodological parameters for this integration, which are defined as follows.
+This Section presents the design parameters for KBS insertion into DL models. In this scenario, the DL model plays the primary role, while the KBS plays the secondary role. Figure \ref{fig:overview_kbs_dl_intro} outlines the specific methodological parameters for this integration, which are defined as follows.
 
 \paragraph{Limitations}
 \begin{enumerate} [start=1,label={\bfseries L\arabic*.}]
@@ -494,4 +492,8 @@ Semantic-based initialization instantiates the introductory integration method p
 
 
 \section{Summary}\label{4_sec:summary}
-\elvitodo{TBD: Hay que relacionarlo con las contribuciones, objetivos. Lo completaré al terminar la metodología para cuadrarlo.}
+This chapter addresses two of the contributions of this thesis: \textbf{C1} and \textbf{C4}. Section \ref{4_sec:methodology_kbs_intro_dl} outlines contribution \textbf{C1: design method for the insertion of knowledge-based systems into deep learning models}. This method addresses the existing limitations within DL models from an introduction perspective (e.g., brittleness, lack of constraint enforcement, or limited transferability), providing also prior considerations and restrictions that should be met for the integration to be successful, such as stable model performance and model complexity. The general benefits derived from the integration are also depicted. Moreover, this contribution also supports the attainment of objective \textbf{O1: define a set of general parameters per dimension for each integration of knowledge-based systems and deep learning models}. 
+
+Knowledge graph completion provides a fitting scenario for the application of the design method depicted in C1, following the achievement of objective \textbf{O2: instantiate the proposed design method across different models and use scenarios}. Knowledge graph embedding (KGE) models, which are based on deep learning, are the predominant paradigm in this area, presenting two main shortcomings that can be resolved with the introduction of KBS: i) lack of background information, ii) inability to reason over inputs that are not present during training (out-of-knowledge-base entities). A semantic initialization method based on ontologies is proposed to deal with the aforementioned shortcomings. The proposed initialization is another contribution of this thesis, \textbf{C4: semantic-based initialization method for knowledge graph embedding models}. The encoding of ontological information within the KGE model improves the results achieved by the baseline models while considerably accelerating their convergence. Moreover, it also enables reasoning over unseen elements of the graph, addressing one of the main open challenges in the context of knowledge graph completion. 
+
+The compliance of the proposed initialization is then assessed with respect to the general design method, fulfilling the objective \textbf{O3: assessing the compliance of each implementation with respect to the general design parameters}. 
