--- a/5_dlintegrationkbs/dlintegrationkbs.tex
+++ b/5_dlintegrationkbs/dlintegrationkbs.tex
@@ -1,7 +1,7 @@
 \chapter{Deep Learning Introduction into Knowledge-Based Systems}
 \label{chap:dlintegrationkbs} 
 
-This chapter\footnote{This chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., & Bajo, J. (2021). A Case-Based Reasoning Model Powered by Deep Learning for Radiology Report Recommendation. Int. J. Interact. Multim. Artif. Intell., 7(2), 15. doi:10.9781/ijimai.2021.08.011} presents the second insertion integration between deep learning models and knowledge-based systems. Section \ref{5_sec:dl_intro_kbs_methodology} presents the method parameters for the insertion of deep learning models in a knowledge-based system. This insertion method is instantiated into a hybrid framework, combining a case-based reasoning (CBR) model with different deep learning modules. Section \ref{5_sec:dl_powered_kbs_medical} outlines the main features of the proposed framework, focusing on its application in the medical domain. In this context, a CBR powered by DL modules for the generation of medical reports is presented. This scenario showcases the benefits of the introduction of DL into a CBR model, such as enabling reasoning over complex data (i.e., textual reports and images) or enhanced scalability. Section \ref{5_sec:raidologist} instantiates the proposed framework in its use for radiological report generation. Section \ref{5_sec:experimental_results} presents the experimental results. The compliance of the case scenario regarding the general design method is outlined in Section \ref{5_sec:design_compliance}. The chapter is summarized in Section \ref{5_sec:summary}. 
+This chapter\footnote{This chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., and Bajo, J. (2021). A Case-Based Reasoning Model Powered by Deep Learning for Radiology Report Recommendation. Int. J. Interact. Multim. Artif. Intell., 7(2), 15. doi:10.9781/ijimai.2021.08.011} presents the second insertion integration between deep learning models and knowledge-based systems. Section \ref{5_sec:dl_intro_kbs_methodology} presents the method parameters for the insertion of deep learning models in a knowledge-based system. This insertion method is instantiated into a hybrid framework, combining a case-based reasoning (CBR) model with different deep learning modules. Section \ref{5_sec:dl_powered_kbs_medical} outlines the main features of the proposed framework, focusing on its application in the medical domain. In this context, a CBR powered by DL modules for the generation of medical reports is presented. This scenario showcases the benefits of the introduction of DL into a CBR model, such as enabling reasoning over complex data (i.e., textual reports and images) or enhanced scalability. Section \ref{5_sec:raidologist} instantiates the proposed framework in its use for radiological report generation. Section \ref{5_sec:experimental_results} presents the experimental results. The compliance of the case scenario regarding the general design method is outlined in Section \ref{5_sec:design_compliance}. The chapter is summarized in Section \ref{5_sec:summary}. 
 
 
 \section{Deep Learning Insertion in Knowledge-Based Systems}\label{5_sec:dl_intro_kbs_methodology}
@@ -11,7 +11,7 @@ This chapter\footnote{This chapter is based on the work: Amador-Domínguez, E., 
     \caption{Overview on the Insertion of Deep Learning into a Knowledge-Based System.}
     \label{fig:overview_dl_kbs_intro}
 \end{figure}
-In the second integration approach, the KBS is the primary model, while DL serves as a supporting element. Figure \ref{fig:overview_dl_kbs_intro} outlines the design parameters for the introduction of DL into KBS.
+Desing parameters per dimension for the introduction of DL into KBS are outlined in this section. In the second integration approach, the KBS is the primary model, while DL serves as a supporting element. Figure \ref{fig:overview_dl_kbs_intro} outlines the design parameters for the introduction of DL into KBS.
 \subsection*{Limitations}
 \begin{enumerate} [start=1,label={\bfseries L\arabic*.}]
     \item \textbf{Reliance on human interaction.} \label{dl_intro_kbs_L_human} While some KBS behave autonomously, the majority of them have expert knowledge as their cornerstone.  Expert knowledge can not be automatically elicited, as it comes directly from human users. Moreover, the implication of human users within the KBS may not be only limited to their deployment, but can also be required for validation, extension, and maintenance. 
@@ -300,4 +300,6 @@ A case-based reasoning model comprising several boosting DL modules instantiates
 \end{itemize}
 
 \section{Summary}\label{5_sec:summary}
-\elvitodo{TBD cuando esté hecha la metodología para relacionar todo}
+Contributions \textbf{C2} and \textbf{C5} are presented in this chapter. Contribution \textbf{C2: design method for the insertion of deep learning into knowledge-based systems} is outlined in Section \ref{5_sec:dl_intro_kbs_methodology}. Existing limitations within KBS are identified and outlined in the design, such as its high reliance on human intervention and its limited abstraction capacity and scalability. Considerations regarding technical and contextual aspects of the integration, as well as the specific restrictions that must be met by the resulting system (e.g., interpretability must be preserved). The benefits derived from this integration are also highlighted by the design (e.g., enhanced inference capacity, improved scalability). Objective \textbf{O1: define a set of general parameters per dimension for each integration of knowledge-based systems and deep learning models} is fulfilled again from this contribution.
+
+A KBS-dominated field is selected for the instantiation of this design. Medical document generation poses a quaint task, as it combines the need for a KBS, due to its interpretability and user input integration, but can greatly benefit from the inclusion of a deep learning model. Section \ref{5_sec:dl_powered_kbs_medical} presents the proposed instantiation of the design, which also serves as a contribution of this thesis \textbf{C5: a modular case-based reasoning framework powered by deep learning models for medical document generation.} The proposed framework combines a case-based reasoning model with several deep learning modules, improving the inference capacity of the system while reducing the need for human intervention. A version of the framework for its application on radiology report generation is provided, named r.AID.ologist. Nonetheless, the proposed framework is fully modular and can be easily adapted to fit a wide variety of documents and domains. Moreover, the framework is fully compliant with the proposed design, thus enabling the conformance with objective \textbf{O3: assessing the compliance of each implementation with respect to the general design parameters.}
