--- a/6_kbsextractiondl/kbsextractiondl.tex
+++ b/6_kbsextractiondl/kbsextractiondl.tex
@@ -2,7 +2,7 @@
 \label{chap:kbsextractiondl}
 %ENLAZAR ESTO CON LOS PRINCIPIOS DE EXPLICABILIDAD DE PHILLIPS ET AL..
 This chapter\footnote{This chapter is based on the work: References
-Amador-Domínguez, E., Serrano, E., & Manrique, D. (2021). A hierarchical multi-agent architecture based on virtual identities to explain black-box personalization policies. Expert Systems with Applications, 186, 115731. doi:10.1016/j.eswa.2021.115731} showcases the extraction of knowledge from DL Models. Section \ref{6_sec:kbs_extra_dl_method} provides an overview on the design parameters of KBS extraction from DL models. Two instances of the proposed design are introduced in this chapter. The first instance focuses on \textit{black-box hyperpersonalization models} (BBHOS), DL models devised for user content personalization. Section \ref{6_sec:mas_bbhos_general} introduces this scenario, where a multi-agent system extracts behavioral patterns from the BBHOS. The MAS system is presented in Section \ref{6_sec:subsec:mas_description}, providing an example of its use in Section \ref{6_sec:subsec:case_study}. Section \ref{6_sec:subsec:mas_design_compliance} assesses the compliance of the proposed instance of the model with respect to the general method. 
+Amador-Domínguez, E., Serrano, E., and Manrique, D. (2021). A hierarchical multi-agent architecture based on virtual identities to explain black-box personalization policies. Expert Systems with Applications, 186, 115731. doi:10.1016/j.eswa.2021.115731} showcases the extraction of knowledge from DL Models. Section \ref{6_sec:kbs_extra_dl_method} provides an overview on the design parameters of KBS extraction from DL models. Two instances of the proposed design are introduced in this chapter. The first instance focuses on \textit{black-box hyperpersonalization models} (BBHOS), DL models devised for user content personalization. Section \ref{6_sec:mas_bbhos_general} introduces this scenario, where a multi-agent system extracts behavioral patterns from the BBHOS. The MAS system is presented in Section \ref{6_sec:subsec:mas_description}, providing an example of its use in Section \ref{6_sec:subsec:case_study}. Section \ref{6_sec:subsec:mas_design_compliance} assesses the compliance of the proposed instance of the model with respect to the general method. 
 
 Section \ref{6_sec:geni_main} outlines the second of the extraction instances. In this scenario, an explainability framework for extracting insights on the inference process of KGE models is presented. The proposed framework, GEnI, is described in Section \ref{6_sec:subsec:geni}. Sections \ref{6_sec:subsec:geni_evaluation} and \ref{6_sec:subsec:geni_results} depict the evaluation and analysis of the framework results, respectively. The compliance of the instance with respect to the general design parameters is portrayed in Section \ref{6_sec:subsec:geni_design_compliance}. Section \ref{6_sec:summary} summarizes the content of the chapter.
 
@@ -617,3 +617,9 @@ Figure \ref{fig:design_compliance_geni} portrays the design parameters of the GE
 
 %\section{Design Compliance II}
 \section{Summary}\label{6_sec:summary}
+This chapter addresses contributions \textbf{C3}, \textbf{C6} and \textbf{C7} of this thesis. The first of the contributions is outlined in Section \ref{6_sec:kbs_extra_dl_method}, namely, \textbf{C3: design method for knowledge-based system extraction from deep learning models.} In this interaction, the limitations of DL models are addressed from an extraction perspective, thus leading to limitations that are different from those reported in Section \ref{4_sec:methodology_kbs_intro_dl}. In this context, opacity is the main limitation amongst other existing difficulties such as lack of human perspective or limited transferability. The considerations, restrictions, and benefits of the integration are also depicted, as in the previous cases. With the design method for KBS extraction from DL models, all potential interactions are covered, thus fulfilling objective \textbf{O1: define a set of general parameters per dimension for each integration of knowledge-based systems and deep learning models.}
+
+Two different application scenarios are considered for this design. The first scenario focuses on hyper-personalization online systems, since they are mostly based on deep learning models and directly interact with real human users. Therefore, it provides a challenging scenario with interesting and unique features. The goal of this scenario is to extract behavioral user profiles from hyper-personalization systems, whose purpose is twofold: i) explaining the behavior of hyper-personalization systems when faced with different user profiles, and ii) improve the quality of the personalized content while increasing user privacy. For this purpose, a multi-agent system based on virtual identities simulating user behavior is proposed, which translates into contribution \textbf{C6: multi-agent architecture for user behavioral pattern extraction from black-box hyperpersonalization systems.} A use case to illustrate the workflow of the system is also provided.
+
+The second scenario focuses again on knowledge graph completion, this time from an explainability perspective. Therefore, the goal in this case is not to enhance the performance of knowledge graph embedding models, but to explain their inferential process. For this purpose, a framework capable of extracting rules, correlations, and insights from knowledge graph embeddings is presented. This framework comprises the contribution \textbf{C7: GEnI, a framework for generating explanations and insights for knowledge graph embedding predictions.} This framework not only is model-agnostic, but is capable of reliably explaining the inference process of a given fact from its embeddings. The compliance of GEnI and the proposed multi-agent architecture for behavioral pattern extraction from deep learning models with respect to the general model is successfully addressed, attaining objective \textbf{O3: assess the compliance of each implementation with respect to the general design parameters.}  
+
