--- a/7_conclusions/conclusions.tex
+++ b/7_conclusions/conclusions.tex
@@ -3,32 +3,32 @@
 The final chapter of this thesis addresses the conclusions (Section \ref{7_sec:conclusions}) of the research, as well as outlining the potential lines for future research (Section \ref{7_sec:future_research}). Section \ref{7_sec:research_results} summarizes the research results achieved during the development of this thesis.
 
 \section{Conclusions}\label{7_sec:conclusions}
-This thesis provides a design method for knowledge-based systems and deep learning models according to their interactions from three different perspectives: knowledge-based systems insertion into deep learning models, deep learning model insertion into knowledge-based systems and knowledge-based system extraction from deep learning models. The proposed design method addresses the limitations exhibited in previous existing design approaches. Previous approaches set predefined roles for symbolic and subsymbolic models, where the first are used for representation and the later for reasoning. Moreover, the symbolic approaches explored in the literature for integration mostly limit to rule-based systems, with neural networks being the prominent subsymbolic models. This thesis extends the role of symbolic approaches, represented by knowledge-based systems, from purely representation paradigms to reasoning models. Moreover, several different paradigm combinations are successfully explored in this thesis, extending the range of possible integrations. The design method presented in this thesis also considers contextual and technical aspects that were not previously considered. Therefore, besides presenting the \textit{limitations} on the primary model and the potential \textit{benefits} that motivate the integration, \textit{considerations} on the technical and contextual aspects are formulated to assess the feasibility of the integration. Also, a set of \textit{restrictions} are enunciated to evaluate the correctness of the integration. 
+This thesis provides a design method for the integration of knowledge-based systems and deep learning models according to their interactions from three different perspectives: knowledge-based systems insertion into deep learning models, deep learning model insertion into knowledge-based systems and knowledge-based system extraction from deep learning models. The proposed design method addresses several limitations exhibited in previously existing design approaches. Previous approaches set predefined roles for symbolic and subsymbolic models, where the first are used for representation and the later for reasoning. Moreover, the symbolic approaches explored in the literature for integration mostly limit to rule-based systems, with neural networks being the prominent subsymbolic models. This thesis extends the role of symbolic approaches, represented by knowledge-based systems, from purely representation paradigms to reasoning models. Moreover, several different paradigm combinations are successfully explored in this thesis, extending the range of possible integrations. The general design method presented in this thesis also considers contextual and technical aspects that were not previously addressed. Therefore, besides presenting the \textit{limitations} on the primary model and the potential \textit{benefits} that motivate the integration, \textit{considerations} on the technical and contextual aspects are formulated to assess the feasibility of the integration. Also, a set of \textit{restrictions} are enunciated to evaluate the correctness of the integration. A design method per modeled integration is formulated.
 
-An instance of each integration design method is generated to evaluate the applicability of the proposed design. Suitable scenarios for the application of the proposed design are detected. The studied application scenarios pose challenges that cannot be overcome with a single model, thus motivating the integration. 
+An instance of each integration design method is generated to evaluate the applicability of the proposal. Suitable scenarios for the application of the proposed design are first detected. The studied application scenarios pose challenges that cannot be overcome with a single model, thus motivating the integration. 
 
-The first instantiation (knowledge-based system insertion into deep learning models) focuses on knowledge graph completion, one of the prominent areas of neurosymbolic integration. Knowledge graph embedding models, the prominent paradigm of this area, presented several limitations including the lack of inference of explicit restrictions and its incapability of reasoning over unseen inputs. These limitations can be addressed with the encoding of ontologies within the knowledge graph embedding model. A semantic-based initialization is formulated that successfully integrates ontological information about the entities within the knowledge graph embedding model, subsequently accelerating and improving the final results, while doting the model with the capacity of reasoning over unseen inputs.
+The first instantiation (knowledge-based system insertion into deep learning models) focuses on knowledge graph completion, one of the main areas of neurosymbolic integration. Knowledge graph embedding models, the prominent paradigm of this area, present several limitations including the lack of inference of explicit restrictions and its incapability of reasoning over unseen inputs. These limitations can be addressed with the encoding of ontologies within the knowledge graph embedding model. A semantic-based initialization is formulated that successfully integrates ontological information about the entities within the knowledge graph embedding model, subsequently accelerating the convergence and improving the final results, while doting the model with the capacity of reasoning over unseen inputs.
 
-In the second integration (deep learning introduction into knowledge-based systems), the proposed design is instantiated in the context of medical document generation. This context presents a quaint application scenario, as most document generation approaches are reliant on deep learning, but AI applications in the medical domain are highly dependant on expert knowledge. A case-based reasoning model powered by deep learning modules is presented that successfully reconciles both components under a unified framework. The introduction of deep learning models within the case-based reasoning model eases the reduce of human intervention while still considering user input, as well as improving the scalability and inference capacity of the model. 
+In the second integration (deep learning introduction into knowledge-based systems), the proposed design is instantiated in the context of medical document generation. This context presents a quaint application scenario, as most document generation approaches are reliant on deep learning, but AI applications in the medical domain are highly dependant on expert knowledge. A case-based reasoning model powered by deep learning modules is presented that successfully reconciles both components under a unified framework. The introduction of deep learning models within the case-based reasoning model eases the need for human intervention while still considering user input, as well as improving the scalability and inference capacity of the model. 
 
-Regarding knowledge-based system extraction from deep learning models, two application scenarios were considered for instantiation, each presenting different particularities. The first scenario introduces a multi-agent architecture that acts as a middleware model for the extraction of behavioral user patterns from black-box hyperpersonalization policies. Besides the extraction of behavioral paterns, the proposed multi-agent architecture increases the privacy of the user while improving the results of the target hyperpersonalization system. The second application continues the work instantiated in the first integration, focusing on explaining the predictions of knowledge graph embedding models. For this purpose, the framework GEnI is proposed. This framework extracts rules, correlations and insights on the inferential process of knowledge graph embedding models. The information mined from the model not only is human-readable and understandable, but helps detecting potential biases within the model. 
+Regarding knowledge-based system extraction from deep learning models, two application scenarios were considered for instantiation, each presenting different particularities. The first scenario introduces a multi-agent architecture that acts as a middleware model for the extraction of behavioral user patterns from black-box hyperpersonalization policies. Besides the extraction of behavioral patterns, the proposed multi-agent architecture increases the privacy of the user while improving the results of the target hyperpersonalization system. The second application continues the work instantiated in the first integration, focusing on explaining the predictions of knowledge graph embedding models. For this purpose, the framework GEnI is proposed. This framework extracts rules, correlations, and insights on the inferential process of knowledge graph embedding models. The information mined from the model not only is human-readable and understandable, but helps detecting potential biases within the model. 
 
-The first of the hypotheses (H1) claimed that \textit{a design method for the integration of knowledge-based systems and deep learning models can be proposed to accurately describe any integration instance}. This hypothesis is validated throughout the definition of a design method for each potential integration and its subsequent instantiation across different application scenarios. Then, for each instantiation, its compliance with respect to the general design is assessed. This evaluation showed that all the proposed instantiations can be successfully explained in terms of the proposed design, and that their specific parameters are also instances of the general parameters. 
+The first of the hypotheses (H1) claimed that \textit{a design method for the integration of knowledge-based systems and deep learning models can be proposed to accurately describe any integration instance}. This hypothesis is validated throughout the definition of a design method for each potential integration and its subsequent instantiation across different application scenarios. Then, for each instantiation, its compliance with respect to the general design is assessed. This evaluation showed that all proposed instantiations can be successfully explained in terms of the proposed design, and that their specific parameters are also instances of the general parameters. 
 
 The second hypothesis (H2) states that \textit{knowledge-based systems and deep learning models are not antagonistic, but complementary, and their integration can enable the resolution of problems that could not be achieved otherwise}. H2 is validated throughout different instance implementations, where the successful integration of knowledge-based systems and deep learning across different application scenarios enables the resolution of complex tasks that may not be achieved otherwise. Moreover, it is demonstrated that the existing synergies between the two types of models enables the generation of final systems that combine their advantages while minimizing their disadvantages.
 
 
 \section{Future Research}\label{7_sec:future_research}
-This thesis presents both high-level (integration methods) and low-level (resource) contributions. These two levels do not concur independently, but form a cycle where the higher-level advances are then materialized into resources. Future steps on both levels are introduced hereafter:
+This thesis presents both high-level (integration design methods) and low-level (resource) contributions. These two levels do not concur independently, but form a cycle where the higher-level advances are then materialized into resources. Future steps on both levels are introduced hereafter:
 
-\subsection*{Integration Methods}
-Regarding integration methods, the following research lines can be addressed:
+\subsection*{Integration Design Methods}
+Regarding integration design methods, the following research lines can be addressed:
 \begin{itemize}
-    \item \textbf{Dimension and parameter revision.} The continuous evolution within deep learning and knowledge-based systems requires a constant revision of the design method. In this area, additional dimensions to the model addressing unexplored aspects could be proposed, deepening in some of the aspects addressed in previously existing methods that remained unaddressed in this thesis. Examples of these are data representation or coupling degree between models. In the same vein, the proposed dimensional parameters per integration method should be revised to be coherent with the state-of-the-art. 
+    \item \textbf{Dimension and parameter revision.} The continuous evolution within deep learning and knowledge-based systems requires a constant revision of the design method. In this area, additional dimensions to the model addressing unexplored aspects could be proposed, deepening in some of the aspects outlined in previously existing methods that are not contemplated in this thesis. Examples of these possible dimensions are representation or coupling degree between models. In the same vein, the proposed dimensional parameters per integration method should be revised to be coherent with the state-of-the-art. 
     
-    \item \textbf{Application scenario detection.} This thesis explored several application scenarios where the integration of knowledge-based systems and deep learning models enabled the resolution of challenging scenarios. Profiling these scenarios and establishing guidelines on which tasks are more prone to require the instantiation of the proposed design method would subsequently facilitate its application. Moreover, it would also enable the discovery of potential new dimensions of parameters. 
+    \item \textbf{Application scenario detection.} This thesis explored several application scenarios where the integration of knowledge-based systems and deep learning models enabled the resolution of challenging scenarios. Profiling these scenarios and establishing guidelines on which tasks are more prone to require the instantiation of the proposed design method would subsequently facilitate its application. Moreover, it would also enable the discovery of new potential dimensions and parameters. 
     
-    \item \textbf{Composing instance integration.} The AI spectrum is vast and comprises a wide variety of models. The work in this thesis showcased the variety of potential successful integrations between knowledge-based systems and deep learning models. The selection of compatible paradigms that fit each application scenario is not straightforward and may pose a challenge that hinders the use of integration. Future research should be conducted in detecting model pairs that are compatible with each other according to their design parameters. Similarly, a set of recommendation guidelines that help detecting the best pairing given a set of parameters should be researched and established.
+    \item \textbf{Profiling instance integration.} The AI spectrum is vast and comprises a wide variety of models. The work in this thesis showcased the variety of potential successful integrations between knowledge-based systems and deep learning models. The selection of compatible paradigms that fit each application scenario is not straightforward and may pose a challenge that hinders the use of integration. Future research should be conducted in detecting model pairs that are compatible with each other according to their design parameters. Similarly, a set of recommendation guidelines that help detecting the best pairing given a set of parameters should be researched and established.
 \end{itemize}
 
 %%A nivel teórico:
@@ -43,8 +43,8 @@ Regarding the instantiations and the generated resources, the following future l
 \begin{itemize}
     \item \textbf{Extending GEnI.} This framework is one of the contributions of this thesis, capable of extracting insights and explanations on the inference process of knowledge graph embedding predictions. GEnI achieves promising results and serves as a stepping stone for future explainability proposals in the area. However, several improvements could be made to further enhance the framework:
     \begin{itemize}
-        \item \textit{Studying the impact on the node degree with respect to the final predictions.} Knowledge graphs comprise a series of entities (nodes) connected to each other by means of relations (edges), subsequently forming facts. The number of times each entity is featured in a fact is not balanced, with some entities being featured significantly more. In terms of graphs, more featured entities should have a higher in-out degree as they connect to several nodes across multiple edges. From an inferential standpoint, those entities that are more prominently featured should be identified by the model and used as anchors to make predictions about less featured entities. Therefore, this phenomenon should therefore be reflected in the extracted insights and explanations.
-        \item \textit{Improving clustering embedding algorithms.} C-means is used to automatically detect relation clusters, while agglomerating hierarchical clustering is used for entity aggregation. While these clustering approaches offer good results, they are not particularly efficient and do not scale well when the number of relations or entities increases. Research on how to efficiently aggregate relations and entities in a scalable and accurate way should be conducted and would further enhance the performance of the framework.
+        \item \textit{Studying the impact on the node degree with respect to the final predictions.} Knowledge graphs comprise a series of entities (nodes) connected to each other by means of relations (edges), subsequently forming facts. The number of times each entity is featured in a fact is not balanced, with some entities being featured significantly more. In terms of graphs, frequently featured entities should have a higher in-out degree as they connect to several nodes across multiple edges. From an inferential standpoint, those entities that are more prominently featured should be identified by the model and used as anchors to make predictions about less featured entities. Therefore, this phenomenon should be reflected in the extracted insights and explanations.
+        \item \textit{Improving embedding aggregation algorithms.} C-means is used to automatically detect relation clusters, while agglomerating hierarchical clustering is used for entity aggregation. While these clustering approaches offer good results, they are not particularly efficient and do not scale well when the number of relations or entities increases. Research on how to efficiently aggregate relations and entities in a scalable and accurate way should be conducted and would further enhance the performance of the framework.
         \item \textit{Influential fact detection from embeddings.} One of the core principles of GEnI is that information must be mined from the embeddings and not the data. For influential detection, however, data is first required to retrieve those facts that are connected to the fact to be explained, which are then validated against the embeddings. This approach does not strictly break the aforementioned principle, but should be replaced by an embedding-only strategy capable of obtaining the same set of related facts. 
     \end{itemize}
     \item \textbf{Implementing and assessing the behavior of the proposed multi-agent system.} Section \ref{6_sec:mas_bbhos_general} depicts a multi-agent architecture capable of extracting using profiles from black-box hyperpersonalization systems. This architecture is then studied and evaluated from a theoretical standpoint. Implementing the proposed architecture and evaluating it on real hyperpersonalization systems not only could serve to assess the performance of the model in terms of user privacy increment and system explanation, but enable the detection of new design parameters that may not be detected otherwise.
