Chapter 1 finishhhhedddd. Awaiting corrections and missing abstract. I MADE IT. I FUCKING MADE IT

--- a/0_frontmatter/glossary.tex
+++ b/0_frontmatter/glossary.tex
@@ -17,6 +17,7 @@
 \item[GPU]{Graphical Processing Unit}
 \item[GVID]{Generated Virtual Identity}
 \item[KBS]{Knowledge-Based System(s)}
+\item[KG]{Knowledge Graph}
 \item[KGC]{Knowledge Graph Completion}
 \item[KGE]{Knowledge Graph Embedding(s)}
 \item[MAS]{Multi-Agent System}
@@ -26,6 +27,7 @@
 \item[OOKB]{Out-of-Knowledge-Base}
 \item[TF-IDF]{Term Frequency-Inverse Document Frequency}
 \item[UVID]{User Virtual Identity}
+\item[XAI]{Explainable Artificial Intelligence}
 
 \end{description}
 % ----------------------- contents from here ------------------------
