--- a/3_objectives/objectives.tex
+++ b/3_objectives/objectives.tex
@@ -1,4 +1,4 @@
-\chapter{Problem Statement, Goals, and Methodology}\label{chap:methodology}
+\chapter{Problem Statement, Goals, and Research Methodology}\label{chap:methodology}
 
 The goal of this thesis is to advance the state-of-the-art in neurosymbolic AI by introducing a design method t. This chapter presents the limitations detected in the state-of-the-art that motivate the research conducted in this thesis (Section \ref{3_sec:limitations}). Section \ref{3_sec:problem_statement} depicts the research problem addressed in this thesis, outlining the hypotheses, goals, contributions, assumptions, and restrictions. The research methodology followed in this thesis is presented in Section \ref{3_sec:research_methodology}.
 
