--- a/6_kbsextractiondl/kbsextractiondl.tex
+++ b/6_kbsextractiondl/kbsextractiondl.tex
@@ -8,7 +8,7 @@ Section \ref{6_sec:geni_main} outlines the second of the extraction instances. I
 
 
 \section{Knowledge Extraction from Deep Learning Models}\label{6_sec:kbs_extra_dl_method}
-In this context, the DL model acts as a passive element, from which the KBS is extracted by means of a middleware model. Method design parameters for KBS extraction from DL models are depicted in Figure \ref{fig:kbs_extra_dl_overview}.
+In this context, the DL model acts as a passive element, from which the KBS is extracted by means of a middleware model. In this scenario, the extracted KBS are mostly limited to associative rules and correlations. Method design parameters for KBS extraction from DL models are depicted in Figure \ref{fig:kbs_extra_dl_overview}.
 \begin{figure}[t]
     \centering
     \includegraphics[width=\linewidth]{6_kbsextractiondl/figures/K_extraction_DL.eps}
